zapis wczytanie z jpg i jakis innych plikuw oraz generowanie klucza