@@ -7,7 +7,13 @@ import javafx.stage.FileChooser;
 import java.io.File;
 import java.nio.file.Files;
 import java.io.IOException;
+import java.security.NoSuchAlgorithmException;
+import java.util.Base64;
+import javax.crypto.KeyGenerator;
+import javax.crypto.SecretKey;
+
 public class CryptoController {
+    private final AES aes = new AES();
 
     @FXML
     private TextArea inputField;
@@ -19,32 +25,76 @@ public class CryptoController {
     private TextArea outputField;
     @FXML
     private void handleOpenFile() {
-        // 1. Tworzymy obiekt FileChooser
         FileChooser fileChooser = new FileChooser();
-        fileChooser.setTitle("Wybierz plik tekstowy");
+        fileChooser.setTitle("Wybierz dowolny plik");
 
-        // 2. Opcjonalnie: Filtrowanie plików (pokazuj tylko .txt)
+        // Dodajemy filtr "Wszystkie pliki"
         fileChooser.getExtensionFilters().add(
-                new FileChooser.ExtensionFilter("Pliki tekstowe", "*.txt")
+                new FileChooser.ExtensionFilter("Wszystkie pliki", "*.*")
         );
 
-        // 3. Pokazujemy okno (wymaga odniesienia do głównego okna - Stage)
-        // Pobieramy stage z dowolnego elementu, np. z pola inputField
-        java.io.File selectedFile = fileChooser.showOpenDialog(inputField.getScene().getWindow());
+        File selectedFile = fileChooser.showOpenDialog(inputField.getScene().getWindow());
 
         if (selectedFile != null) {
             try {
-                // 4. Czytamy zawartość pliku i wstawiamy do TextArea
-                String content = java.nio.file.Files.readString(selectedFile.toPath());
+                // Czytamy surowe bajty pliku
+                byte[] bytes = Files.readAllBytes(selectedFile.toPath());
+
+                // Opcja A: Wczytanie jako tekst (może "psuć" pliki binarne przy zapisie)
+                // String content = new String(bytes, java.nio.charset.StandardCharsets.UTF_8);
+
+                // Opcja B: Bezpieczniejsza dla obrazów/plików binarnych - Base64
+                String content = java.util.Base64.getEncoder().encodeToString(bytes);
+
                 inputField.setText(content);
-                System.out.println("Wczytano plik: " + selectedFile.getName());
-            } catch (java.io.IOException e) {
-                System.err.println("Błąd podczas czytania pliku: " + e.getMessage());
+                System.out.println("Wczytano: " + selectedFile.getName());
+            } catch (IOException e) {
+                outputField.setText("Błąd odczytu: " + e.getMessage());
+            }
+        }
+    }
+
+    @FXML
+    private void handleSaveFile() {
+        String contentToSave = outputField.getText();
+        if (contentToSave.isEmpty()) return;
+
+        FileChooser fileChooser = new FileChooser();
+        fileChooser.setTitle("Zapisz plik");
+
+        // Brak filtrów spowoduje, że użytkownik sam wpisuje pełną nazwę (np. "moj_plik")
+        File file = fileChooser.showSaveDialog(outputField.getScene().getWindow());
+
+        if (file != null) {
+            try {
+                String content = outputField.getText().trim();
+                try {
+                    // Próbujemy odkodować (zadziała tylko dla "czystego" Base64 bez spacji)
+                    byte[] decodedBytes = java.util.Base64.getDecoder().decode(content);
+                    Files.write(file.toPath(), decodedBytes);
+                } catch (IllegalArgumentException e) {
+                    // Jeśli to nie był Base64 (bo były spacje), zapisujemy jako zwykły tekst
+                    Files.writeString(file.toPath(), content);
+                }
+
+                System.out.println("Zapisano: " + file.getAbsolutePath());
+            } catch (Exception e) {
+                outputField.setText("write error: " + e.getMessage());
             }
         }
     }
     @FXML
-    private void handleGenKey(){}
+    private void handleGenKey(){
+
+        // Pobieramy surowe bajty z Twojej nowej metody
+        byte[] surowyKlucz = aes.generowanieklucza();
+
+        // Konwertujemy je na String tylko na potrzeby wyświetlenia w TextField
+        String kluczDoPola = Base64.getEncoder().encodeToString(surowyKlucz);
+
+        keyField.setText(kluczDoPola);
+
+    }
     // Metoda wywoływana po kliknięciu "ZASZYFRUJ"
     @FXML
     private void handleEncrypt() {
@@ -52,8 +102,8 @@ public class CryptoController {
         String key = keyField.getText();
 
         // Tutaj wstawisz swoją logikę szyfrowania
-        String result =  originalText + " (klucz: " + key + ")";
-        outputField.setText(result);
+        // String result =  originalText + " (klucz: " + key + ")";
+        outputField.setText(originalText);
     }
 
     // Metoda wywoływana po kliknięciu "ODSZYFRUJ"
@@ -63,7 +113,7 @@ public class CryptoController {
         String key = keyField.getText();
 
         // Tutaj wstawisz swoją logikę odszyfrowywania
-        String result = "Odszyfrowano tekst kluczem: " + key;
+        String result = "gratulacje uzytkowniku odszyfrowales cos tam";
         outputField.setText(result);
     }
 }
